Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-05-13 Takashi
 Japanese translation - update
  Src/Languages/Japanese/MergeJapanese.rc

2007-05-13 Takashi
 BUG: [ 1717814 ] Fix header drawing issue on WinXP with Luna Theme
  Src/Common/SortHeaderCtrl.cpp

2007-05-12 Tim
 PATCH: [ 1716799 ] Remove TOOLBAR from lang files
  Src: Merge.rc Merge2.rc
  Src/Languages/*: Merge*.rc

2007-05-07 Tim
 RFE: [ 1711549 ] Simplify IDC_IGNOREREGEXP text
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2007-05-06 Tim
 RFE: [ 1711548 ] Move common things to own resource file
  Src: Merge.rc
  Src new file: Merge2.rc
  Src/res: Merge.rc2

2007-04-30 Kimmo
 PATCH: [ 1704904 ] Korean Translation 2.6.X
  Submitted by Sukjoon, Hwang
  Src/Languages/Korean: MergeKorean.rc

2007-04-28 Kimmo
 PATCH: [ 1703350 ] Update of Swedish MergeSwedish.rc
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2007-04-26 Gal
 BUG: [ 1706476 ] (2.6.6.0) wrap lines looses horizontal scroll bar
  Src/editlib: ccrystaltextview.cpp

2007-04-16 Tim
 PATCH: [ 1701151 ] Various Updates in German Translation
  Src/Languages/German: MergeGerman.rc

2007-04-14 Kimmo
 PATCH: [ 1700241 ] Add trailing slash for foldernames in Copy Confirm dialog
  Src: DirActions.cpp

2007-04-13 Kimmo
 PATCH: [ 1699585 ] Fix copy confirmation dialog for CopyTo
  Src: ConfirmFolderCopyDlg.cpp DirActions.cpp FileActionScript.h Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2007-04-12 Kimmo
 BUG: [ 1698159 ] Invalid state change assertion
  Src: CompareStats.cpp CompareStats.h DiffThread.cpp DirCompProgressDlg.cpp
 PATCH: [ 1698641 ] Add 32x32 toolbar
  Src: MainFrm.cpp MainFrm.h Merge.rc OptionsDef.h OptionsInit.cpp resource.h
  Src/Languages/*: Merge*.rc
  Src/res new files: ToolbarDisabled32.bmp ToolbarEnabled32.bmp

2007-04-11 Kimmo
 Fix assert caused by my checkin 2007-04-08 Remove couple of useless wrapper functions
  Src: MergeDoc.cpp
