@@ -3,12 +3,16 @@ Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
 2007-05-13 Takashi
+ PATCH: [ 1718148 ] Fix tab bar problem
+  Src/Common: MDITabBar.cpp
+
+2007-05-13 Takashi
  Japanese translation - update
   Src/Languages/Japanese/MergeJapanese.rc
 
 2007-05-13 Takashi
  BUG: [ 1717814 ] Fix header drawing issue on WinXP with Luna Theme
-  Src/Common/SortHeaderCtrl.cpp
+  Src/Common: SortHeaderCtrl.cpp
 
 2007-05-12 Tim
  PATCH: [ 1716799 ] Remove TOOLBAR from lang files
